examples/network-policy-examples/example-base-env.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - image: ikubernetes/demoapp:v1.0
        name: demoapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - image: ikubernetes/demoapp:v1.0
        name: demoapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - image: ikubernetes/admin-box:v1.2
        name: sleep
        command: ["/bin/sh", "-c", "sleep 99999"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - image: ikubernetes/demoapp:v1.0
        name: demoappv10
      - image: ikubernetes/demoapp:v1.1
        name: demoappv11
        command: ["/bin/sh", "-c", "python3 /usr/local/bin/demo.py --port=8080"]
